# grasp

./: .gitignore  README.md  pyproject.toml  run_app.cmd
scripts/pndt/: Export-PndtVectorsToGpkg.ps1  Get-PndtInventory.ps1  Set-PndtQgisProjectLocal.ps1  export_pndt_raw_vectors.py
src/grasp/: __init__.py  app.py  branding.py  data_languages.py  models.py  name_simplification.py  qt_compat.py  runtime.py  settings.py  source_style.py  styling.py  workspace.py
src/grasp/catalog/: __init__.py  repository.py
src/grasp/export/: __init__.py  service.py
src/grasp/ingest/: __init__.py  service.py
src/grasp/intelligence/: __init__.py  providers.py  service.py
src/grasp/ui/: main_window.py  map_bridge.py  settings_dialog.py  workers.py
src/grasp/ui/assets/: leaflet_map.html
tests/: test_catalog.py  test_export.py  test_ingest.py  test_intelligence.py  test_main_window.py  test_map_assets.py  test_map_bridge.py  test_name_simplification.py  test_runtime.py  test_settings.py  test_source_style.py  test_styling.py  test_workspace.py
tools/dev/: README.md  build_pyinstaller.cmd  build_pyinstaller.py  portable-win11.cmd
